--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,10 +147,6 @@ input:checked ~ .check {
     justify-content: center;
 }
 
-.index-page{
-    padding: 30px;
-}
-
 .pull-right{
     float: right;
 }
@@ -202,7 +198,11 @@ ul li:focus, ul li:active{
     color:#1a81c6;
 }
 .tacklebox-page .slick-slide{
-    max-height: 520px;
+    /* max-height: 520px; */
+}
+.slick-slider-wrapper{
+    max-height: 100%;
+    height: 100%;
 }
 .categories-wrapper{
     /* max-width: 600px;
@@ -358,10 +358,19 @@ a:active, a:focus{
 .slick-slide
 {
     height: inherit !important;
-    max-height: 560px; 
     overflow: auto;
 }
+.scroll-wrapper{
+    max-height: calc(100vh - 275px) !important;
+}
 
+.drawer-scroll-wrapper{
+    max-height: calc(100vh - 280px) !important;
+}
+.drawer-footer{
+    position: absolute;
+    bottom: 20px;    
+}
 .variants-wrapper{
     position: relative;
 }
@@ -384,7 +393,7 @@ a:active, a:focus{
 }
 .scroll-content{
     overflow-y: auto;
-    max-height: 560px;
+    max-height: calc(100vh - 235px);
 }
 h1.page-title{
     text-align: center;
