--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -627,3 +627,63 @@ h5.modal-title{
     right: 0;
     top: -10px;
 }
+
+.facebook{
+    color:#3B5998;
+}
+
+.google{
+    
+}
+
+.social-login{
+    width: 100%;
+    box-shadow: none;
+    cursor: pointer;    
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 5px 0;
+}
+.social-login i{
+    width: 40px;
+    background-color: #fff;
+    /* padding: 12px 15px 11px 13px; */
+    font-size: 25px;
+    height: 40px;
+}
+
+.google i{
+    background:url(../imgs/google.svg) 50% no-repeat;
+    background-size: 55%;
+    text-indent: -9999px;
+    background-color: white;
+}
+
+.facebook div{
+    background:#3B5998;
+    color: white;
+    width: 100%;
+    line-height: 40px;
+}
+.google div{
+    background: #4285F4;
+    width: 100%;
+    color: white;
+    line-height: 40px;
+}
+
+.social-login.google{
+    border: 1px solid #4285F4; 
+    background-color: #4285F4;
+}
+
+.social-login.facebook{
+    border: 1px solid #3B5998;     
+    background-color: #3B5998;
+}
+
+.facebook i{
+    font-size: 20px;
+    padding-top: 10px;
+}
