--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,7 @@ a:hover, a:focus, a:active{
     padding: 15px 20px;    
     cursor: pointer;
     display: inline-block;
+    font-weight: bold;
 }
 
 .login-form-container{
@@ -233,8 +234,11 @@ ul.vertical li:last-child{
     border: none;
 }
 .vertical-item img{
-    max-width: 50px;
+    max-width: 90px;
+    padding: 0 10px;
     margin-right: 15px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 li.vertical-item label{
@@ -246,6 +250,8 @@ li.vertical-item label{
 li.vertical-item a,li.vertical-item span{
     display: flex;
     align-items: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 .vertical-item i{
     padding-right: 10px;
@@ -461,13 +467,16 @@ h1.page-title{
 .vertical-item div{
     align-items: center;
     display: flex;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 input.autocomplete{
-    padding:5px 10px 5px 40px;    
+    padding:10px 10px 10px 40px;    
     position: relative;
     width: 100%;
     font-size: 20px;
+    border: 1px solid black;
 }
 
 .search-input:after{
@@ -488,8 +497,20 @@ input.autocomplete{
     width: 100%;
 }
 
+input[type='checkbox'] {
+    -webkit-appearance:none;
+    width:30px;
+    height:30px;
+    background:white;
+    border-radius:5px;
+    border:2px solid #555;
+}
+input[type='checkbox']:checked {
+    background: #abd;
+}
+
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
 }
   
 /* Track */
