--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,6 @@ a:hover, a:focus, a:active{
     padding: 15px 20px;    
     cursor: pointer;
     display: inline-block;
-    font-weight: bold;
 }
 
 .login-form-container{
@@ -497,15 +496,20 @@ input.autocomplete{
     width: 100%;
 }
 
-input[type='checkbox'] {
+input[type='checkbox'] ,input[type='radio'] {
     -webkit-appearance:none;
     width:30px;
     height:30px;
-    background:white;
-    border-radius:5px;
+    background:white;  
     border:2px solid #555;
 }
-input[type='checkbox']:checked {
+input[type='checkbox']{
+    border-radius: 5px;
+}
+input[type="radio"]{
+    border-radius: 15px;
+}
+input[type='checkbox']:checked,input[type='radio']:checked {
     background: #abd;
 }
 
