--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -763,7 +763,7 @@ input[type="text"]{
 body {
     min-height: 100vh;
     /* mobile viewport bug fix */
-    min-height: -webkit-fill-available;
+    /* min-height: -webkit-fill-available; */
 }  
 
 @media screen and (max-width:767px){
