--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -635,6 +635,7 @@ input[type='checkbox']:checked,input[type='radio']:checked {
 }
 
 .preview {
+    display: none;
     overflow: hidden;
     width: 160px;
     height: 160px;
@@ -645,7 +646,7 @@ input[type='checkbox']:checked,input[type='radio']:checked {
     max-height: 350px;
 }
 .modal-buttons-wrapper{
-    margin: 10px;
+    margin: 10px 0;
     display: flex;
 }
 #modal .img-container{
