--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -392,7 +392,7 @@ a:active, a:focus{
     max-width: 600px;
     margin: 0 auto;
     background: white;
-    min-height: 600px;
+    min-height: 100vh;
     max-height: 100vh;
     overflow-y: hidden;
     position: relative;
